# prompt2yolo

./: .dockerignore  .env_example  Dockerfile  Makefile  README.md  pyproject.toml
configs/: README.md  input.yaml
configs/yolo_v3_tiny/: image_generator.yaml  training.yaml
configs/yolo_v5/: evaluation.yaml  image_generator.yaml  image_labeler.yaml  training.yaml
envs/.bin/: utils.sh
envs/conda/: build_conda_env.sh  conda_env_info.sh  environment.yml  find_conda_env.sh  install_miniconda_ubuntu.sh  utils.sh
notebooks/: test_data_preparation.ipynb
prompt2yolo/: configs.py  enums.py
prompt2yolo/data/: file_handler.py  label_loader.py  utils.py
prompt2yolo/evaluation/: label_categorizer.py  label_evaluator.py  prompt_weight_calculator.py  utils.py
prompt2yolo/execution/: run_data_generation.py  run_label_evaluation.py  run_yolo_v3_tiny_training_preparation.py  run_yolo_v5_inference_preparation.py  run_yolo_v5_training_preparation.py
prompt2yolo/experiment_manager/: __init__.py  app.py  utils.py
prompt2yolo/model/: utils.py
prompt2yolo/utils/: logger.py  s3_data_downloader.py  s3_handler.py  utils.py
scripts/: automate_human_detection_model_training.sh  run_image_generation.sh  run_label_evaluation.sh  run_yolo_v3_tiny_model_training.sh  run_yolo_v5_label_detection.sh  run_yolo_v5_model_evaluation.sh  run_yolo_v5_model_training.sh
scripts/.bin/: init.sh  utils.sh
scripts/components/: evaluate_labels.sh  generate_image_data.sh
tests/data/: test_utils.py
tests/evaluation/: test_evaluation_utils.py  test_label_categorizer.py  (+2 more)
(+36 files in other folders)
